# ynk_store_planner

./: .dockerignore  .env.example  .env.integrated.example  DEPLOYMENT_INTEGRATED_192.168.18.155.md  DEPLOY_GITHUB.md  Dockerfile  EERR_por_tienda.html  M_modelo.py  README.md  Simulador_EERR.html  deploy.sh  docker-compose.integrated.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
data/: D2_Arriendos.xlsx  (+10 more)
ynk_main/: .gitignore  env.example  pyproject.toml
ynk_main/config/: users.txt
ynk_main/data/: D0_Diccionario tiendas.xlsx  D1_Venta y Contribucion.xlsx  D2_Arriendos.xlsx  D3_Dotacion.xlsx  ynk_users.db
ynk_main/deploy/: sync_data.sh
ynk_main/old/: AUTH_GUIDE.md  DEPLOYMENT.md  QUICKSTART_DOCKER.md  README.md
ynk_main/scripts/: M_modelo.py  daemon_start.sh  docker-build.sh  docker-run.sh  generate_breakeven.py  init_database.py  restart.sh  run_prod.sh  status.sh
ynk_main/src/ynk_modelo/cli/: flask_server.py  main.py
ynk_main/src/ynk_modelo/config/: __init__.py
ynk_main/src/ynk_modelo/database/: db.py  models.py
ynk_main/src/ynk_modelo/domain/: eerr.py  uf.py
ynk_main/src/ynk_modelo/interfaces/: simulator.py  state_report.py
ynk_main/src/ynk_modelo/utils/: file_watcher.py
ynk_main/static/css/: simulador.css
ynk_main/templates/: _brand_bar.html  admin_permissions.html  admin_roles_form.html  admin_users.html  admin_users_form.html  dashboard.html  login.html  report_wrapper.html  simulador.html
ynk_main/tests/: test_state_report_threshold.py  test_variable_rent_threshold.py
ynk_main/tests/fixtures/: README.md
(+227 files in other folders)
